--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
     <link rel="stylesheet" href="./tailwind.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <title>Rocket IO</title>
 </head>
-<body>
+
+<body class="min-h-screen bg-slate-50">
     
-    <h1 class="bg-purple-600 text-white p-8">Manne</h1>
+    <header class="bg-violet-900 text-white top-0 z-10">
+        <section class="max-v-6xl mx-auto p-4 flex justify-between item-center">
+            <h1 class="text-3xl font-medium">
+                <a href="#">🚀 Rocket.io</a>
+            </h1>
+            <div class="flex flex-row gap-4 items-center">
+                <nav>
+                    <ul class="flex gap-4 text-xl">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Our Apps</a></li>
+                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+    </header>
+
+    <main class="max-v-6xl mx-auto"></main>
+
+    <footer class="bg-violet-900 text-white teyt-xl" id="footer"></footer>
 
 </body>
+
 </html>
