--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
 <head>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./tailwind.css">
@@ -29,7 +29,23 @@
         </section>
     </header>
 
-    <main class="max-v-6xl mx-auto"></main>
+    <main class="max-v-6xl mx-auto">
+        <section id="hero" class="flex flex-col-reverse justify-center items-center gap-8 mb-12 scroll-m-40 sm:flex-row p-6">
+            <article>
+                <div class="text">
+                    <h2>bla bla <span>bla</span> bla bla!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fuga, similique dolorem vitae reprehenderit eum, dolore suscipit, aut placeat impedit assumenda? Atque dicta molestiae similique aperiam earum suscipit vitae architecto?</p>
+                    <div>
+                        <a href="#contact">Kontakt</a>
+                    </div>
+                </div>
+            </article>
+            <img src="./assets/rocketdab.png" alt="an astronaut riding on a rocket making the dub move">
+        </section>
+        <section id=""></section>
+        <section id=""></section>
+        <section id=""></section>
+    </main>
 
     <footer class="bg-violet-900 text-white teyt-xl" id="footer"></footer>
 
